Sigil 0.6.0 TBA
    - Implement issue 761: Shortcut key to close last open tag (Code View)
    - Implement issue 1507: Metadata dialogs should allow double click to select.
    - Implement issue 1443: Find&Replace should save state on restart,
      UI should enable/disable more items based on view
    - Implement issue 1416: Don't add selected text to F&R history and increase selected
      text limit for being auto loaded into F&R.
    - Implement issue 1414: Cover semantic should not be added automatically.
    - Implement issue 1405: Cleared shortcut reset to default after restart.
    - Implement issue 1407: Tidy should allow more fine-grained control.
    - Implement issue 1393: Add Semantics Text should only apply to one file.
    - Implement issue 1369: Add support for \xDD as Regex replacement in F&R.
    - Implement issue 1285: Display image properties.
    - Implement issue 534: Link to Stylesheets option for HTML files.
    - Implement issue 1385: Metadata editor should always display fields
    - Implement issue 1311: Metadata support for all RfC 639-2 languages.
    - Implement issue 1335: Run Save As automatically if saving new html file.
    - Implement issue 1366: TOC window tree support for collapse/expand all.
    - Implement issue 759: Auto generate inline TOC HTML file.
    - Implement issue 32: Metadata custom "date" options.
    - Implement issue 33: Metadata options for creators and contributors.
    - Implement issue 1374: Split View is now Preview View with code inspector.
    - Implement issue 1375: Replace Book View Editor with editor based on CKEditor.
      - Implements a number of requested features and fixes.
      - Updated internal storage of text for easier management.
    - Implement 60: Book View buttons for text alignment.
    - Implement issue 425: Book View Shift+PgUp/PgDn should highlight text.
    - Implement issue 184: Book View Superscript/subscript buttons.