@@ -82,6 +82,10 @@ public:
 
     bool PasteEnabled();
 
+    bool CutCodeTagsEnabled();
+
+    bool InsertClosingTagEnabled();
+
     int GetCursorLine() const;
     int GetCursorColumn() const;
 
@@ -158,6 +162,8 @@ public slots:
      * Implements Paste action functionality.
      */
     void Paste();
+
+    void CutCodeTags();
 
     /**
      * Implements Split chapter action functionality.
